error.txt
(node:22508) Warning: Failed to load the ES module: c:\Users\madhav\Downloads\music-website-main\music-website-main\frontend\components\PlaylistView.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
c:\Users\madhav\Downloads\music-website-main\music-website-main\frontend\components\PlaylistView.js:1
import { icons, getPlaceholderImage, formatDuration } from '../utils/helpers.js';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (node:internal/modules/cjs/loader:1734:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v25.4.0
